<resources>
    <string name="facebook_app_id">1857181957836361</string>
    <string name="app_name">TripSplit</string>
    <string name="login">Login</string>
    <string name="welcome_text">Welcome to TripSplit, where you can share Journeys and connect with new friends</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="last_message">Messages</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="date_text">Mon 16,June 16</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_title_sort">Sort</string>
    <string name="about_me_heading">About Me</string>
    <string name="review_text">Reviews</string>
    <string name="source_dest_text">Dubai To Zanzibar</string>
    <string name="about_me_txt">Sed us perspicatis unde omnis iste natus error sit valuptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab voluptatem accusantium doloremque laudantium,\n tatam rem aperiam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="white_chat_box_text">Sed ut per hgfrehb wehry fwegfrwh hjgfd ugwebhjg ghdtg wygejwh vhgf tweugbn </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="shareit">Share it</string>
    <string name="editpic">Pick Image</string>
    <string name="pick_from_galary">Pick from gallery</string>
    <string name="take_picture">Take picture</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_have_account_register_here"><u>Don\'t have account? Register here!</u></string>
    <string name="editaddress">Address</string>
    <string name="editcountry">Country</string>
    <string name="url">http://netforce.biz/tripesplit/mobileApp/api/</string>
    <string name="progress_dialog">Please wait</string>
    <string name="please_wait">Please wait for a moment</string>
    <string name="appkey">abcd</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="choose_weather">Choose whether you
would like to Post a Trip
or Search Splitz….
</string>
    <string name="connect_with_fb">Connect with <b>Facebook</b></string>
    <string name="third_tutorial">Got space to split? Want to find someone to take a trip with?</string>
    <string name="second_tutorial">Meet in a public place try to choose mixed groups don\'t give away too much personal info when</string>
    <string name="first_tutorial">Sign up and be apart of the next big thing in Social Travel</string>
    <string name="fourth_tutorial">Save your hard earned cash. Split your cost with new travel buddies.</string>
    <string name="editdob">Date of Birth</string>
    <string name="departure_address">Departure Address</string>
    <string name="destination_address">Destination Address</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="total_cost">Total Cost</string>
    <string name="currency_not_found">Currency not found</string>
    <string name="return_etd">Return ETD</string>
    <string name="return_eta">Return ETA</string>
    <string name="passenger">Passenger</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="selected_place">Selected Place</string>
    <string name="choose_source">Choose Source</string>
    <string name="choose_destination">Choose Destination</string>
    <string name="itinerary">Itinerary</string>
    <string name="add_image">Add Image</string>
    <string name="postdetail">Trip created successfully</string>
    <string name="ok">OK</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="best_match">Best match</string>
    <string name="low_cost">Lowest Cost</string>
    <string name="highest_cost">Highest Cost</string>
    <string name="date">Date</string>
    <string name="cantbeempy">Field cannot be empty</string>
    <string name="no_split_found">No split found</string>
    <string name="search">Search</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="category">Category</string>
    <string name="search_group">Search Group</string>
    <string name="choose_category">Choose Category</string>
    <string name="create_group">Create Group</string>
    <string name="group_title">Group Title</string>
    <string name="home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="search_spliz">Search Splitz</string>
    <string name="post_trip">Post Trip</string>
    <string name="my_splitz">My Splitz</string>
    <string name="my_trip">My Tripz</string>
    <string name="messages">Messages</string>
    <string name="dummy">dummy</string>
    <string name="lorem_description">"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</string>
    <string name="group">Group</string>
    <string name="how_it_works">How it works</string>
    <string name="support">Support</string>
    <string name="age_group">Age group</string>
    <string name="travelling_with">Travelling With</string>
    <string name="action_delete">Delete</string>
    <string name="removegroup">Leave Group</string>
    <string name="leavegroup">Are you sure you want to leave the group?</string>
    <string name="not_in_group">You are not in the group!</string>
    <string name="about_me">About me</string>
    <string name="aeroplane_splitz">Aeroplane Splitz</string>
    <string name="car_splitz">Car Splitz</string>
    <string name="bus_splitz">Bus Splitz</string>
    <string name="boat_splitz">Boat Splitz</string>
    <string name="globe">Globe</string>
    <string name="list">List</string>
    <string name="submit">Submit</string>
    <string name="deleteconversation">Delete Conversation</string>
    <string name="deletechat">Are you sure you want to delete the conversation?</string>
</resources>