<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.netforceinfotech.tripsplit.group.GroupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textviewSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:background="@drawable/editext_background"
                android:gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:paddingTop="8dp"
                android:text="@string/search"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textViewGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Group"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageViewCreateGroup"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:src="@drawable/ic_edit_message" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:id="@+id/relativeLayoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">

            <LinearLayout
                android:id="@+id/linearlayoutSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewClose"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/textViewCountry"
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_margin="16dp"
                        android:layout_weight="50"
                        android:background="@drawable/editext_background"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/country"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/editTextCity"
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp"
                        android:layout_weight="50"
                        android:background="@drawable/editext_background"
                        android:gravity="center_vertical"
                        android:hint="@string/city"
                        android:inputType="textPostalAddress"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/editext_background"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"

                    android:text="@string/category"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/buttonSearchGroup"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/editext_background_filled"
                    android:text="@string/search_group"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_close_primary" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/groupFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>


    </LinearLayout>

</FrameLayout>
