<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/login_header">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:visibility="gone" />

            <TextView
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/welcome_text"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/contact_background"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="6dp"
                    android:hint="Name"
                    android:padding="8dp"
                    android:textColorHint="@color/red"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/contact_background"
                    android:drawableLeft="@drawable/ic_name"
                    android:drawablePadding="6dp"
                    android:hint="Email"
                    android:padding="8dp"
                    android:textColorHint="@color/red" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="50">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/contact_background"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="6dp"
                            android:hint="Password"
                            android:padding="8dp"
                            android:textColorHint="@color/red" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="50">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/contact_background"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="6dp"
                            android:hint="Confirm"
                            android:padding="8dp"
                            android:textColorHint="@color/red" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/etemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/contact_background"
                    android:drawableLeft="@drawable/ic_name1"
                    android:drawablePadding="4dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/etpassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/contact_background"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="6dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/buttonSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/contact_background"
                    android:text="Sign In"
                    android:textColor="@color/red" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <TextView
                        android:textSize="14sp"
                        android:id="@+id/textviewForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </LinearLayout>

            <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ripple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp">

                <LinearLayout
                    android:id="@+id/linearlayoutFbLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/com_facebook_blue"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="3dp"
                    android:weightSum="102">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_facebook" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2">

                        <View
                            android:layout_width="1dp"
                            android:layout_height="40dp"
                            android:background="@color/white"></View>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="80"
                        android:gravity="center"
                        android:text="@string/connect_with_fb"
                        android:textColor="@color/white" />
                </LinearLayout>


            </com.balysv.materialripple.MaterialRippleLayout>

            <Button
                android:id="@+id/buttonCustomFB"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/com_facebook_blue"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawablePadding="6dp"
                android:text="@string/connect_with_fb"
                android:textColor="@color/white"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="@color/dark_gray"></View>

            <TextView
                android:textSize="14sp"
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/don_t_have_account_register_here"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>